--- a/regularized_regression_coefficients.ipynb
+++ b/regularized_regression_coefficients.ipynb
@@ -49,11 +49,7 @@
     "&=\\begin{bmatrix}\\frac{y_{1}}{1-\\lambda} \\\\ \\vdots \\\\ \\frac{y_{n}}{1-\\lambda}\\end{bmatrix}\n",
     "\\end{align*}\n",
     "\n",
-    "The Ridge coefficients are:\n",
-    "\n",
-    "$$\\hat{\\beta}_{i}^{ridge}=\\frac{y_{i}}{1-\\lambda}$$\n",
-    "\n",
-    "$$i=1,\\dots,n$$\n",
+    "The Ridge coefficients are $\\hat{\\beta}_{i}^{ridge}=\\frac{y_{i}}{1-\\lambda}$ where $i=1,\\dots,n$.\n",
     "\n",
     "Confirm the coefficients minimize the PRSS by checking that the second derivative is strictly greater than zero.\n",
     "\n",
@@ -67,11 +63,7 @@
     "\n",
     "Given the norm (absolute value) in the regularization term, the solution is a tiny bit trickier to find, so I'll skip the work here and just provide the solution under the simplicity assumption stated previously.\n",
     "\n",
-    "The LASSO coefficients are:\n",
-    "\n",
-    "$$\\hat{\\beta}_{i}^{lasso}=\\left\\{\\begin{array}{ll} y_{i}+\\lambda/2 & y_{i}<-\\lambda/2\\\\ 0 & |y_{i}|\\leq \\lambda/2\\\\ y_{i}-\\lambda/2 & y_{i}>\\lambda/2\\\\ \\end{array}\\right.$$\n",
-    "\n",
-    "$$i=1,\\dots,n$$\n",
+    "The LASSO coefficients are $\\hat{\\beta}_{i}^{lasso}=\\left\\{\\begin{array}{ll} y_{i}+\\lambda/2 & y_{i}<-\\lambda/2\\\\ 0 & |y_{i}|\\leq \\lambda/2\\\\ y_{i}-\\lambda/2 & y_{i}>\\lambda/2\\\\ \\end{array}\\right.$ where $i=1,\\dots,n$.\n",
     "\n",
     "### Ordinary Least Squares (OLS) Regression (For Comparison)\n",
     "\n",
@@ -86,11 +78,7 @@
     "&=\\begin{bmatrix}y_{1} \\\\ \\vdots \\\\ y_{n}\\end{bmatrix}\n",
     "\\end{align*}\n",
     "\n",
-    "The OLS coefficients are:\n",
-    "\n",
-    "$$\\hat{\\beta}_{i}^{ols}=y_{i}$$\n",
-    "\n",
-    "$$i=1,\\dots,n$$"
+    "The OLS coefficients are $\\hat{\\beta}_{i}^{ols}=y_{i}$ where $i=1,\\dots,n$."
    ]
   },
   {
