--- a/imputation.ipynb
+++ b/imputation.ipynb
@@ -151,7 +151,7 @@
    ],
    "source": [
     "# load data and rename columns\n",
-    "df = (pd.read_csv('~/Desktop/daily-min-temps.csv', header=0)\n",
+    "df = (pd.read_csv('~/Documents/github/misc-statistics-work/daily-min-temps.csv', header=0)\n",
     "      .rename(columns={'Date': 'dt', \n",
     "                       'Daily minimum temperatures': 'orig'}))\n",
     "\n",
@@ -179,16 +179,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/pandas/plotting/_matplotlib/converter.py:103: FutureWarning: Using an implicitly registered datetime converter for a matplotlib plotting method. The converter was registered by pandas on import. Future versions of pandas will require you to explicitly register matplotlib converters.\n",
+      "\n",
+      "To register the converters:\n",
+      "\t>>> from pandas.plotting import register_matplotlib_converters\n",
+      "\t>>> register_matplotlib_converters()\n",
+      "  warnings.warn(msg, FutureWarning)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x10b433110>]"
+       "[<matplotlib.lines.Line2D at 0x123f8e350>]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -218,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -248,10 +260,6 @@
     "    \"\"\"\n",
     "    # calculate number of days in <wwks> weeks\n",
     "    wdys = wwks * 7\n",
-    "    \n",
-    "    # add dow and woy columns\n",
-    "    d['dow'] = d['dt'].dt.dayofweek\n",
-    "    d['woy'] = d['dt'].dt.weekofyear\n",
     "    \n",
     "    # define the dow and woy values for specific index\n",
     "    tdow = d.loc[idx, 'dow']\n",
@@ -298,6 +306,10 @@
     "        the imputed dataframe, the needing imputation index \n",
     "        list, and the imputed values list\n",
     "    \"\"\"\n",
+    "    # add dow and woy columns\n",
+    "    d['dow'] = d['dt'].dt.dayofweek\n",
+    "    d['woy'] = d['dt'].dt.weekofyear\n",
+    "    \n",
     "    # define list of indices needing imputation\n",
     "    lidx = np.where(np.asanyarray(np.isnan(d['impd'])))[0]\n",
     "    # apply do_impute to each index in list\n",
@@ -309,6 +321,9 @@
     "    # overwrite nan values with imputed values\n",
     "    d.loc[lidx, 'impd'] = ival\n",
     "    \n",
+    "    # drop dow and woy columns\n",
+    "    d = d[['dt', 'orig', 'impd', 'type']]\n",
+    "    \n",
     "    # return: \n",
     "    #     1. cleaned dataframe\n",
     "    #     2. list of imputed indices\n",
@@ -318,14 +333,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0653 seconds\n"
+      "0.0592 seconds\n"
      ]
     }
    ],
@@ -355,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -383,8 +398,6 @@
        "      <th>orig</th>\n",
        "      <th>impd</th>\n",
        "      <th>type</th>\n",
-       "      <th>dow</th>\n",
-       "      <th>woy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -394,8 +407,6 @@
        "      <td>16.5</td>\n",
        "      <td>16.19</td>\n",
        "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>179</td>\n",
@@ -403,8 +414,6 @@
        "      <td>9.5</td>\n",
        "      <td>7.76</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>486</td>\n",
@@ -412,8 +421,6 @@
        "      <td>6.3</td>\n",
        "      <td>10.71</td>\n",
        "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>565</td>\n",
@@ -421,8 +428,6 @@
        "      <td>?0.2</td>\n",
        "      <td>6.71</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>566</td>\n",
@@ -430,8 +435,6 @@
        "      <td>?0.8</td>\n",
        "      <td>6.67</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>755</td>\n",
@@ -439,8 +442,6 @@
        "      <td>15.6</td>\n",
        "      <td>15.40</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1290</td>\n",
@@ -448,8 +449,6 @@
        "      <td>?0.1</td>\n",
        "      <td>7.14</td>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2100</td>\n",
@@ -457,8 +456,6 @@
        "      <td>9.9</td>\n",
        "      <td>10.07</td>\n",
        "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2937</td>\n",
@@ -466,8 +463,6 @@
        "      <td>13.9</td>\n",
        "      <td>15.92</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3003</td>\n",
@@ -475,8 +470,6 @@
        "      <td>13.2</td>\n",
        "      <td>14.40</td>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3571</td>\n",
@@ -484,29 +477,27 @@
        "      <td>7.7</td>\n",
        "      <td>9.62</td>\n",
        "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>41</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             dt  orig   impd  type  dow  woy\n",
-       "24   1981-01-25  16.5  16.19     1    6    4\n",
-       "179  1981-06-29   9.5   7.76     1    0   27\n",
-       "486  1982-05-02   6.3  10.71     1    6   17\n",
-       "565  1982-07-20  ?0.2   6.71     1    1   29\n",
-       "566  1982-07-21  ?0.8   6.67     1    2   29\n",
-       "755  1983-01-26  15.6  15.40     1    2    4\n",
-       "1290 1984-07-14  ?0.1   7.14     1    5   28\n",
-       "2100 1986-10-03   9.9  10.07     1    4   40\n",
-       "2937 1989-01-18  13.9  15.92     1    2    3\n",
-       "3003 1989-03-25  13.2  14.40     1    5   12\n",
-       "3571 1990-10-14   7.7   9.62     1    6   41"
+       "             dt  orig   impd  type\n",
+       "24   1981-01-25  16.5  16.19     1\n",
+       "179  1981-06-29   9.5   7.76     1\n",
+       "486  1982-05-02   6.3  10.71     1\n",
+       "565  1982-07-20  ?0.2   6.71     1\n",
+       "566  1982-07-21  ?0.8   6.67     1\n",
+       "755  1983-01-26  15.6  15.40     1\n",
+       "1290 1984-07-14  ?0.1   7.14     1\n",
+       "2100 1986-10-03   9.9  10.07     1\n",
+       "2937 1989-01-18  13.9  15.92     1\n",
+       "3003 1989-03-25  13.2  14.40     1\n",
+       "3571 1990-10-14   7.7   9.62     1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,16 +511,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x10c2f5290>]"
+       "[<matplotlib.lines.Line2D at 0x110f74610>]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
